Modifications to compile

--- a/Presentation/02-command.tex
+++ b/Presentation/02-command.tex
@@ -233,126 +233,139 @@ dir1/dir1.2/dir1.2.2
 \begin{frame}{Важные аббревиатуры внутри командной строки}
   \begin{itemize}
     \item Для директорий
-    \begin{itemize}
-      \item {\tt $\sim$} Домашняя директория
-      \item {\tt $\sim$<username>} Домашняя директория пользователя
-      \item {\tt ..} Родительская директория
-      \item {\tt .} Текущая директория
-    \end{itemize}
-  \pause  
-  \item Wildcards
-    \begin{itemize}
-      \item {\tt *} Любой набор символов {\tt file*txt : file1.txt filefilefiletxt}
-      \item {\tt $[$<список>$]$ } символ из заданного набора {\tt }
-      \item {\tt ?} любой один символ
-     \end{itemize}
+      \begin{itemize}
+        \item {\tt $\sim$} Домашняя директория
+        \item {\tt $\sim$<username>} Домашняя директория пользователя
+        \item {\tt ..} Родительская директория
+        \item {\tt .} Текущая директория
+      \end{itemize}
+      \pause  
+    \item Wildcards
+      \begin{itemize}
+        \item {\tt *} Любой набор символов {\tt file*txt : file1.txt filefilefiletxt}
+        \item {\tt $[$<список>$]$ } символ из заданного набора {\tt }
+        \item {\tt ?} любой один символ
+      \end{itemize}
 
   \end{itemize}
 \end{frame}       
+
 \begin{frame}{Горячие клавиши}
   \begin{itemize}
     \item \textbf{Tab} -- дополнение текущей команды
-     \pause
+      \pause
     \item История команд
       \begin{itemize}
         \item Клавиши курсора -- навигация по истории
         \item Ctrl-R -- поиск в истории по фрагменту
         \item Ctrl-O (после выполнения вставить следующую команду из истории)
         \item Команда {\tt history}
-       \end{itemize}
+      \end{itemize}
     \item Навигация
 
-   \end{itemize}
+  \end{itemize}
 \end{frame}
 
 \section{Взаимодействие процессов}
 \begin{frame}{Процессы в UNIX}
-\begin{itemize}
-  \item Создание процессов
-   \begin{itemize}
-      \item fork
-       \item exec
-   \end{itemize}
-\item Атрибуты процесса
   \begin{itemize}
-   \item pid 
-   \item файловые дескрипторы
-   \item environment
-   \item Рабочая директория (cwd)
-   \item прочее в директории {\tt /proc/<pid>}
+    \item Создание процессов
+      \begin{itemize}
+        \item fork
+        \item exec
+      \end{itemize}
+    \item Атрибуты процесса
+      \begin{itemize}
+        \item pid 
+        \item файловые дескрипторы
+        \item environment
+        \item Рабочая директория (cwd)
+        \item прочее в директории {\tt /proc/<pid>}
+      \end{itemize}
   \end{itemize}
-\end{itemize}
-\begin{frame}{Управление процессами}
-\begin{itemize}
-        \item kill (killall)
-        \item top
-        \item pstree
-	\item Команды управления процессами в bash: 
-	  \begin{itemize}
-                \item {\tt jobs}, {\tt fg, \tt bg}
-		\item Ctrl-C -- оборвать выполнение процесса (SIGINT)
-		\item Ctrl-Z -- остановить выполнение команды (SIGTSTP)
-		\item Ctrl-D -- завершить ввод
-	  \end{itemize}
-\end{itemize}
 \end{frame}
+
+\begin{frame}{Управление процессами}
+  \begin{itemize}
+    \item kill (killall)
+    \item top
+    \item pstree
+    \item Команды управления процессами в bash: 
+      \begin{itemize}
+        \item {\tt jobs}, {\tt fg, \tt bg}
+        \item Ctrl-C -- оборвать выполнение процесса (SIGINT)
+        \item Ctrl-Z -- остановить выполнение команды (SIGTSTP)
+        \item Ctrl-D -- завершить ввод
+      \end{itemize}
+  \end{itemize}
+\end{frame}
+
+
 \begin{frame}{Упражнения}
-\begin{block}{Посмотреть вывод pstree}
-{\tt pstree}
-\end{block}
-\pause
-\begin{block}{Ctrl-C, Ctrl-Z}
-\end{block}
-\pause
-\begin{block}{fork bomb}
-{\tt ulimit -u 200}
-{\tt bomb(){ (bomb; bomb) \& }
-top
-killall bash
-\end{block}
+  \begin{block}{Посмотреть вывод pstree}
+    {\tt pstree}
+  \end{block}
+  \pause
+  \begin{block}{Ctrl-C, Ctrl-Z}
+  \end{block}
+  \pause
+  \begin{block}{fork bomb}
+
+    {\tt ulimit -u 200} 
+
+    {\tt bomb()\{ (bomb; bomb) \& \} }
+
+    top
+
+    killall bash
+
+  \end{block}
 \end{frame}
 
 \begin{frame}{Переменные окружения}
-\begin{itemize}
-\item {\tt HOME}
-\item {\tt PWD}
-\item {\tt LANG}
-\item {\tt LD_LIBRARY_PATH}
-\item {\tt SHELL}
-\item {\tt TERM}
-\item {\tt DISPLAY}
-\end{itemize}
+  \begin{itemize}
+    \item {\tt HOME}
+    \item {\tt PWD}
+    \item {\tt LANG}
+    \item {\tt LD\_LIBRARY\_PATH}
+    \item {\tt SHELL}
+    \item {\tt TERM}
+    \item {\tt DISPLAY}
+  \end{itemize}
 
-Контроль
+  Контроль
 
-\begin{itemize}
-\item export {\tt export VAR=value}
-\item declare -x
-\item echo 
-\end{itemize}
+  \begin{itemize}
+    \item export {\tt export VAR=value}
+    \item declare -x
+    \item echo 
+  \end{itemize}
 
-Переменные окружения наследуются при создании нового процесса
+  Переменные окружения наследуются при создании нового процесса
 \end{frame}
+
 \begin{frame}{Unix way}
-\begin{enumerate}
-  \item Пишите программы, которые делают одну вещь и делают её хорошо.
-  \item Пишите программы, которые бы работали вместе.
-  \item Пишите программы, которые бы поддерживали текстовые потоки, поскольку это универсальный интерфейс. 
-\end{enumerate}
+  \begin{enumerate}
+    \item Пишите программы, которые делают одну вещь и делают её хорошо.
+    \item Пишите программы, которые бы работали вместе.
+    \item Пишите программы, которые бы поддерживали текстовые потоки, поскольку это универсальный интерфейс. 
+  \end{enumerate}
 \end{frame}
+
 \begin{frame}{Unix way}
-\begin{enumerate}
- \item   Маленькое прекрасно.
- \item   Пусть каждая программа делает одну вещь, но хорошо.
- \item   Собирайте прототип как можно раньше.
- \item   Предпочитайте переносимость эффективности.
- \item   Храните данные в простых текстовых файлах.
- \item   Используйте программные рычаги для достижения цели.
- \item   Используйте сценарии командной строки для улучшения функционала и переносимости.
- \item   Избегайте <<связывающего>> (captive) пользовательского интерфейса.
- \item   Делайте каждую программу «фильтром».
-\end{enumerate}
+  \begin{enumerate}
+    \item   Маленькое прекрасно.
+    \item   Пусть каждая программа делает одну вещь, но хорошо.
+    \item   Собирайте прототип как можно раньше.
+    \item   Предпочитайте переносимость эффективности.
+    \item   Храните данные в простых текстовых файлах.
+    \item   Используйте программные рычаги для достижения цели.
+    \item   Используйте сценарии командной строки для улучшения функционала и переносимости.
+    \item   Избегайте <<связывающего>> (captive) пользовательского интерфейса.
+    \item   Делайте каждую программу «фильтром».
+  \end{enumerate}
 \end{frame}
+
 \begin{frame}{Конвееры}
   \textbf{Цель} -- максимальная модульность: большое количество простых приложений, взаимодействующих друг с другом для решения задач
   \begin{itemize}
@@ -361,19 +374,21 @@ killall bash
     \item Синтаксис {\tt <app1> | <app2>}
   \end{itemize}
 \end{frame}
+
 \begin{frame}{Дополнительный набор команд}
- \begin{itemize}
-  \item {\tt cat} - Вывод файла в stdout, соединение нескольких файлов в stdout
-  \item {\tt wc} - подсчет статистики символов в файле или в stdin 
-  \item {\tt sort} - сортировка строк файла
-  \item {\tt uniq} - объединение одинаковых строк в одну
-  \item {\tt tr} - замена набора символов
-  \item {\tt less} - программа-пейджер
-  \item {\tt grep} - поиск строк, соответствующих регулярному выражению
-  \item {\tt cut} - выделение полей из строк stdin
-  \item {\tt awk} - небольшой язык программирования (также полезен для выделения полей)
- \end{itemize}
+  \begin{itemize}
+    \item {\tt cat} - Вывод файла в stdout, соединение нескольких файлов в stdout
+    \item {\tt wc} - подсчет статистики символов в файле или в stdin 
+    \item {\tt sort} - сортировка строк файла
+    \item {\tt uniq} - объединение одинаковых строк в одну
+    \item {\tt tr} - замена набора символов
+    \item {\tt less} - программа-пейджер
+    \item {\tt grep} - поиск строк, соответствующих регулярному выражению
+    \item {\tt cut} - выделение полей из строк stdin
+    \item {\tt awk} - небольшой язык программирования (также полезен для выделения полей)
+  \end{itemize}
 \end{frame}
+
 \begin{frame}[fragile]{Некоторые примеры использования}
 \begin{lstlisting}[language=bash]
 cat /proc/1/environ | tr '\0' '\n' | less
@@ -381,38 +396,40 @@ ls  | wc -l # подсчет числа файлов
 man uniq | tr  '[:space:]' '\n' | sort | uniq -c | sort -n | less # подсчет количества слов в тексте man uniq
 history | wc -l # подсчет ранее введенных команд
 cat /etc/udev/rules.d/* | wc -l
-ls -s *.jpg | awk 'BEGIN{s=0};/^[ ]*[0-9]/{s+=$1};END{print s}' #$
+ls -s *.jpg | awk 'BEGIN{s=0};/^[ ]*[0-9]/{s+=\$1};END{print s}' 
 \end{lstlisting}
-\pause
-\begin{block}{Упражнение}
-Посчитать статистику использования команд в history
-\end{block}
+  \pause
+  \begin{block}{Упражнение}
+    Посчитать статистику использования команд в history
+  \end{block}
 \end{frame}
 
 \begin{frame}{Перенаправления в файл}
+
 \begin{itemize}
-\item Перенаправление stdout 
-\begin{itemize}
-\item С созданием нового файла
+  \item Перенаправление stdout 
+    \begin{itemize}
+      \item С созданием нового файла
 
-{\tt command > file} Например {\tt cat file1 file2 > file3}
-\item С дополнением существующего
+        {\tt command > file} Например {\tt cat file1 file2 > file3}
+      \item С дополнением существующего
 
-{\tt command > >file}
+        {\tt command > >file}
+    \end{itemize}
+    \pause
+  \item Перенаправления stdin
+
+    {\tt command < file}
+    \pause
+  \item Перенаправления stderr
+
+    {\tt command1 2>\&1 | command2}
+
+   {\tt command 1>file 2>\&1}
+
+   {\tt command 2>file 1>\&2}
 \end{itemize}
-\pause
-\item Перенаправления stdin
 
-{\tt command < file}
-\pause
-\item Перенаправления stderr
-
-{\tt command1 2>\&1 | command2}
-
-{\tt command 1>file 2>\&1}
-
-{\tt command 2>file 1>\&2}
-\end{itemize}
 \end{frame}
 
 \begin{frame}[fragile]{Мультистрочный ввод}
@@ -441,25 +458,26 @@ E_O_F
 
 
 \begin{frame}{Настройки bash и кастомизация}
-\begin{itemize}
-  \item Login shell
-   \begin{itemize}
-      \item {\tt /etc/profile}
-      \item {\tt $\sim$/.profile
-   \end{itemize}
-  \item Обычная интерактивная shell
   \begin{itemize}
-  \item {\tt /etc/bash.bashrc}
-  \item {\tt $\sim$/.bashrc}
+    \item Login shell
+      \begin{itemize}
+        \item {\tt /etc/profile}
+        \item {\tt $\sim$/.profile }
+      \end{itemize}
+    \item Обычная интерактивная shell
+      \begin{itemize}
+        \item {\tt /etc/bash.bashrc}
+        \item {\tt $\sim$/.bashrc}
+      \end{itemize}
   \end{itemize}
-\end{itemize}
 
-Полезные команды
-\begin{itemize}
-\item {\tt alias}
-\item {\tt export PATH=}
-\item {\tt Определение функции}
-\end{itemize}
+  Полезные команды
+  \begin{itemize}
+    \item {\tt alias}
+    \item {\tt export PATH=}
+    \item {\tt Определение функции}
+    \item {\tt shopts}
+  \end{itemize}
 
 \end{frame}
 
