--- a/Presentation/02-command.tex
+++ b/Presentation/02-command.tex
@@ -475,6 +475,47 @@ E_O_F
 
 
 
+
+\begin{frame}[fragile]{Практика}
+	\begin{enumerate}
+		\item Создать директорию в /tmp и перейти в нее
+		\item Создать файл1 состоящий из нескольких строк
+		\item Cкопировать файл1 в файл2
+		\item Добиться того, чтобы файл2 состоял из 3 одинаковых копий файла1
+		\item Создать жесткую ссылку на файл1
+		\item Создать символическую ссылку на файл2
+		\item Вывести на экран список всех файлов
+		\item Добавить вывод команды {\tt date} в файл1
+		\item Вывести на экран список всех файлов
+		\item Вывести на экран содержимое файла1 и жесткой ссылки
+		\item Создать PIPE
+		\item Запустить одну команду {\tt cat} на чтение из PIPE
+		\item Записать содержимое файла1 и файла2 в PIPE
+		\item Удалить временную директорию
+	\end{enumerate}
+\end{frame}
+
+\begin{frame}{Редакторы}
+\begin{itemize}
+ \item Интерактивные
+ \begin{itemize}
+ \item vi
+   \begin{itemize}
+    \item Есть почти везде
+   \end{itemize}
+ \item vim
+ \item emacs
+ \end{itemize}
+ \item Поточные {\tt sed}
+ \end{itemize}
+\end{frame}
+
+\begin{frame}{Задание}
+\begin{block}{}
+vimtutor ru
+\end{block}
+\end{frame}
+
 \begin{frame}{Настройки bash и кастомизация}
   \begin{itemize}
     \item Login shell
@@ -498,24 +539,4 @@ E_O_F
   \end{itemize}
 
 \end{frame}
-
-\begin{frame}[fragile]{Практика}
-	\begin{enumerate}
-		\item Создать директорию в /tmp и перейти в нее
-		\item Создать файл1 состоящий из нескольких строк
-		\item Cкопировать файл1 в файл2
-		\item Добиться того, чтобы файл2 состоял из 3 одинаковых копий файла1
-		\item Создать жесткую ссылку на файл1
-		\item Создать символическую ссылку на файл2
-		\item Вывести на экран список всех файлов
-		\item Добавить вывод команды {\tt date} в файл1
-		\item Вывести на экран список всех файлов
-		\item Вывести на экран содержимое файла1 и жесткой ссылки
-		\item Создать PIPE
-		\item Запустить одну команду {\tt cat} на чтение из PIPE
-		\item Записать содержимое файла1 и файла2 в PIPE
-		\item Удалить временную директорию
-	\end{enumerate}
-\end{frame}
-
 \end{document}
