--- a/Presentation/03-users.tex
+++ b/Presentation/03-users.tex
@@ -214,7 +214,8 @@ rwxrw-r-x$\to$765
    \item Получить список групп которым принадлежат устройства в {\tt /dev}
   \end{enumerate}
 \end{block}
-\end{itemize}
+\end{frame}
+
 \begin{frame}{SUID программы}
   lll
 \end{frame}
